[gd_scene load_steps=10 format=3 uid="uid://cwienkfjgkcp7"]

[ext_resource type="Script" path="res://Player.gd" id="1_cqklt"]

[sub_resource type="Animation" id="Animation_s1kyo"]
resource_name = "Slide"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.166667, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0523599, 0, -0.0174533), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_yx1y0"]
resource_name = "Jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.0872665, -0.00349066, -0.0226893), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_h3rsj"]
resource_name = "Landing"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -0.5, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.966667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.0872665, 0.00349066, -0.0226893), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_6tkcj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y8maw"]
_data = {
"Jump": SubResource("Animation_yx1y0"),
"Landing": SubResource("Animation_h3rsj"),
"RESET": SubResource("Animation_6tkcj"),
"Slide": SubResource("Animation_s1kyo")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_noap2"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mc838"]
height = 1.275

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4jvta"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_cqklt")

[node name="neck" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.222, 0)

[node name="Head" type="Node3D" parent="neck"]

[node name="Eyes" type="Node3D" parent="neck/Head"]

[node name="PlayerCamera" type="Camera3D" parent="neck/Head/Eyes"]
fov = 100.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="neck/Head/Eyes"]
root_node = NodePath("../PlayerCamera")
libraries = {
"": SubResource("AnimationLibrary_y8maw")
}

[node name="StandingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.721, 0)
shape = SubResource("CapsuleShape3D_noap2")

[node name="CrouchingCollisionShape" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.345, 0)
shape = SubResource("CapsuleShape3D_mc838")

[node name="RayCastCeiling" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0.792438, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.721, 0)
mesh = SubResource("CapsuleMesh_4jvta")

[node name="Checks" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="Left" type="RayCast3D" parent="Checks"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)

[node name="Front" type="RayCast3D" parent="Checks"]
transform = Transform3D(1.91069e-15, 4.37114e-08, 1, 1, -4.37114e-08, 0, 4.37114e-08, 1, -4.37114e-08, 0, 0, 0)

[node name="Back" type="RayCast3D" parent="Checks"]
transform = Transform3D(1.91069e-15, -4.37114e-08, 1, -1, -4.37114e-08, 0, 4.37114e-08, -1, -4.37114e-08, 0, 0, 0)

[node name="Right" type="RayCast3D" parent="Checks"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
